--- a/apps/gmail2.html
+++ b/apps/gmail2.html
@@ -48,7 +48,7 @@
             <p class="gap">...</p>
             <div class="container">
               <div class="centre">
-                <button class="buttons" onclick="imageMapFailed()">Click Here</button>
+                <button type="button" class="buttons" onclick="imageMapFailed()">Click Here</button>
               </div>
             </div>
             <br>
@@ -210,14 +210,14 @@
           <hr>
           <!--Image of the home page, casue they are no longer clicking the image-->
           <p class="padding2"><b>Home Page:</b></p>
-          <img src="/images/gmail/gmgmEmail.jpg" class="descriptionImage" alt="Email">
+          <img src="/images/gmail/gmEmail.jpg" class="descriptionImage" alt="Email">
           <hr>
           <!--Allowing the user to go back to the previous page if they want.-->
           <p class="padding2">Accidentally clicked the button or want to try the image again, click this button to bring you back to the previous page:</p>
           <p class="gap">...</p>
           <div class="container">
             <div class="centre">
-              <button class="buttons" onclick="goBack()">Click Here</button> <!--Try image map again-->
+              <button type="button" class="buttons" onclick="goBack()">Click Here</button> <!--Try image map again-->
             </div>
           </div>
           <br>
@@ -230,28 +230,28 @@
         <div class="insideBox">
 
           <!--Each section are now in an accordion. The information about each part will be displayed when the header is clicked. These parts have the EXACT SAME information as the descriptions above.-->
-          <button class="accordion">Go Back</button>
+          <button type="button" class="accordion">Go Back</button>
           <div class="section">
             <p class="aboutfunction">Located in the top left corner, looks like an arrow pointing left. This Button is relatively simple, clicking it will bring you back to your Inbox. Nothing will happen to the email, unless this was your first time reading the email it will be marked as read.</p>
             <br>
           </div>
           <br>
 
-          <button class="accordion">Archive</button>
+          <button type="button" class="accordion">Archive</button>
           <div class="section">
             <p class="aboutFunction">This button at the top of the page, shapped like a box with a downwards arrow. Archieving your email is kind of like deleting the email, it will be removed from your inbox and placed into your "All Mail" folder. It will stay in the folder untill you either delete it or the sender replies to the email, which it will then re-appear in your inbox. You can also archive your email while you're on the inbox tab, by sliding the email to the left.</p>
             <br>
           </div>
           <br>
 
-          <button class="accordion">Delete</button>
+          <button type="button" class="accordion">Delete</button>
           <div class="section">
             <p class="aboutFunction">Located in the row of buttons at the top and shaped like a rubbish bin. This button is pretty self explanatory, when you click it you will delete the email. If you wish to restore this email you have 30 days untill google permanently deletes it. To restore your email, go to the trash/bin tab in the side bar of your inbox.</p>
             <br>
           </div>
           <br>
 
-          <button class="accordion">More Options</button>
+          <button type="button" class="accordion">More Options</button>
           <div class="section">
             <p class="aboutFunction">This button is located in the top right and looks like three vertical dots. When you click these three dots, a tab is displayed below. There are options you are able to click, which have each been explained below.</p>
             <p class="aboutFunction"><b>Move to -  </b>Allows you to move your email into different folders for a more organised inbox.</p>
@@ -265,14 +265,14 @@
           </div>
           <br>
 
-          <button class="accordion">Sender</button>
+          <button type="button" class="accordion">Sender</button>
           <div class="section">
             <p class="aboutFunction">In this image the sender is "Joan Plum", this is where the sender details are also located. This is where you can see a few details the emails sender. The circle to the left is their profile picture and next to that is their name. You can also see the time/date of when the email was sent and if it was sent to others as well.</p>
             <br>
           </div>
           <br>
 
-          <button class="accordion">Reply</button>
+          <button type="button" class="accordion">Reply</button>
           <div class="section">
             <p class="aboutFunction">This button is next to the information of the sender, it looks like a rounded left arrow. Clicking this will bring up a new page which will look like your typing a new email, however, some of the parts have already been filled in.</p>
             <img src="/images/gmail/gmReply.jpg" class="descriptionImage" alt="Reply Example">
@@ -285,7 +285,7 @@
           </div>
           <br>
 
-          <button class="accordion">More</button>
+          <button type="button" class="accordion">More</button>
           <div class="section">
             <p class="aboutFunction">Five options are displayed after you click these three dots next to the reply button:</p>
             <p class="aboutFunction"><b>Reply all:  </b>If the message had been sent to multiple people, clicking "Reply all" will allow you to send a reply to everyone.</p>
@@ -297,14 +297,14 @@
           </div>
           <br>
 
-          <button class="accordion">Message</button>
+          <button type="button" class="accordion">Message</button>
           <div class="section">
             <p class="aboutFunction">This is located in the middle of the email. This is the message itself, it's what the sender wanted to you to know. There's not much of an explanation need for this part, the only thing you can do with it is read it.</p>
             <br>
           </div>
           <br>
 
-          <button class="accordion">Attached File.</button>
+          <button type="button" class="accordion">Attached File.</button>
           <div class="section">
             <p class="aboutFunction">If someone has attached a file to the email it will be either displayed like this, or the like the image below. If it's displayed like this it will typically be a file from a Google application(e.g. Docs, Slide, Sheets, etc).</p>
             <img src="/images/gmail/gmAttachedFile.jpg" class="descriptionImage" alt="Attached File">
@@ -313,7 +313,7 @@
           </div>
           <br>
 
-          <button class="accordion">Image</button>
+          <button type="button" class="accordion">Image</button>
           <div class="section">
             <p class="aboutFunction">The attached file won't always be an image attached like this, it could also be a document, video, etc.</p>
             <img src="/images/gmail/gmImage.jpg" class="descriptionImage" alt="Image">
@@ -323,14 +323,14 @@
           </div>
           <br>
 
-          <button class="accordion">Quick Responces</button>
+          <button type="button" class="accordion">Quick Responces</button>
           <div class="section">
             <p class="aboutFunction">Based on the key words in the email you have recieved, quick responces are  suggested for your reply at the bottom of the email. If you click the responce you will be taken to the writing the reply page with that message already written, all you have to do is send it.</p>
             <br>
           </div>
           <br>
 
-          <button class="accordion">Bottom Buttons</button>
+          <button type="button" class="accordion">Bottom Buttons</button>
           <div class="section">
             <p class="aboutFunction">There are multiple places in an email where these three buttons are present. Each are described below:</p>
             <p class="aboutFunction"><b>Reply:  </b>This will reply to just the sender of the message.</p>
@@ -358,23 +358,23 @@
       });
 
       //Shows the area in image map when clicked
-      $('.imageMapCoords').click(function(e) {
-        e.preventDefault();
-        $(".areaDescription").hide().filter('#' + $(this).data('target')).show();
+      $('.imageMapCoords').click(function(e) { //When an element with class="imageMapCoords" is clicked function e operates
+        e.preventDefault(); //The defult action is not implemented
+        $(".areaDescription").hide().filter('#' + $(this).data('target')).show(); //Shows the id with the same data-target
       })
 
-      //Example of accordion from: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_accordion_animate
-      var accordion = document.getElementsByClassName("accordion");
+      //Variables are set/decleared
+      var accordion = document.getElementsByClassName("accordion")
       var i;
-
-      for (i = 0; i < accordion.length; i++) {
-        accordion[i].addEventListener("click", function() {
-          this.classList.toggle("open");
-          var section = this.nextElementSibling;
-          if (section.style.maxHeight) {
-            section.style.maxHeight = null;
-          } else {
-            section.style.maxHeight = section.scrollHeight + "px";
+      //Shows the information in the accordion when header is clicked
+      for (i = 0; i < accordion.length; i++) { //Allows the function to loop so it can happen infinite amount of times
+        accordion[i].addEventListener("click", function() { //Accordion clicked
+          this.classList.toggle("open"); //Opens the accordion
+          var section = this.nextElementSibling; //Section is the following element
+          if (section.style.maxHeight) { //If the section is at max height the following is done
+            section.style.maxHeight = null; //Hides the information
+          } else { //When section is not at max height when heade clicked
+            section.style.maxHeight = section.scrollHeight + "px"; //Shows the information
           } 
         });
       }
